feat: add admin note search
